syntax = "proto3";

package raftpb;

message RequestVoteArgs {
    uint64 term = 1;
    string candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteReply {
    uint64 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesArgs {
    uint64 term = 1;
    string leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated uint64 entries_term = 5;
    repeated bytes entries = 6;
    uint64 leaderCommit = 7;
}

message AppendEntriesReply {
    uint64 term = 1;
    bool success = 2;
}

service Raft {
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply) {
    }
    rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply) {
    }
}
